fixed overflow scroll

--- a/sass/partials/_confirmation.scss
+++ b/sass/partials/_confirmation.scss
@@ -11,6 +11,7 @@
   top: 0;
   width: 100vw;
   height: 100vh;
+  overflow: scroll;
 
   background-color: #b8c6db;
   background-image: linear-gradient(180deg, #eceff5 0, #fafafa 94%);
