--- a/sass/partials/_login.scss
+++ b/sass/partials/_login.scss
@@ -12,7 +12,7 @@
   justify-items: center;
   align-items: center;
   transition: 700ms top ease-in-out;
-  overflow-x: scroll;
+  overflow: scroll;
   background-color: #b8c6db;
   background-image: linear-gradient(180deg, #eceff5 0, #fafafa 94%);
   color: black;
