--- a/sass/partials/_nav.scss
+++ b/sass/partials/_nav.scss
@@ -10,6 +10,7 @@ nav {
   border-bottom: 1px solid var(--color-1);
   height: var(--nav-height);
   width: 100%;
+  overflow: scroll;
 }
 .nav-container {
   height: var(--nav-height);
